[project]
name = "ggate"
version = "5.0.0"
description = "Logic gate simulator"
authors = [
    {name = "astraldev",email = "ekureedem480@gmail.com"}
]
license = {text = "GPL v3"}
readme = "README.md"
requires-python = ">= 3.10,<4.0"
dependencies = [
    "pycairo (>=1.27.0,<2.0.0)",
    "pygobject (>=3.52.3,<4.0.0)",
    "packaging (>=25.0)",
    "python-igraph (>=0.11.9,<0.12.0)",
    "shapely (==2.1.1)",
    "meson-python (>=0.18.0,<0.19.0)",
]

[tool.ruff.lint]
extend-select = ["W291"]
ignore = ["E402"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pygobject-stubs = "^2.13.0"
mypy = "^1.15.0"
ruff = "^0.11.2"

[build-system]
requires = ["meson-python>=0.11.0"]
build-backend = "mesonpy"
