SUBDIRS = Components

glogicdir = $(pythondir)/glogic
glogic_PYTHON = \
	__init__.py \
	CircuitManager.py \
	ComponentConverter.py \
	ComponentWindow.py \
	DiagramArea.py \
	DrawArea.py \
	Exporter.py \
	MainFrame.py \
	Preference.py \
	PreferencesWindow.py \
	PropertyWindow.py \
	TimingDiagramWindow.py \
	Utils.py \
	config.py \
	const.py
