@YELP_HELP_RULES@

HELP_ID = glogic

HELP_LINGUAS = ja

HELP_FILES = \
	add-component.page \
	add-net.page \
	basic-components.page \
	credit.xml \
	flipflop-components.page \
	index.page \
	legal.xml \
	mil-iec.page \
	edit.page \
	other-components.page \
	saveimage.page \
	shiftregister-components.page \
	simulate.page \
	timing.page \
	viewer-components.page

HELP_MEDIA = \
	figures/add-component.png \
	figures/add-net.png \
	figures/glogic-logo.png \
	figures/glogic-trail.png \
	figures/probe-btn.png \
	figures/rsff-equiv.png \
	figures/jkff-equiv.png \
	figures/dff-equiv.png \
	figures/tff-equiv.png \
	figures/sipo-equiv.png \
	figures/components/7seg.png \
	figures/components/adder.png \
	figures/components/and.png \
	figures/components/counter.png \
	figures/components/dff.png \
	figures/components/gnd.png \
	figures/components/jkff.png \
	figures/components/led.png \
	figures/components/nand.png \
	figures/components/nor.png \
	figures/components/not.png \
	figures/components/or.png \
	figures/components/osc.png \
	figures/components/pipo.png \
	figures/components/piso.png \
	figures/components/probe.png \
	figures/components/rsff.png \
	figures/components/sipo.png \
	figures/components/siso.png \
	figures/components/sw.png \
	figures/components/text.png \
	figures/components/tff.png \
	figures/components/vdd.png \
	figures/components/xor.png
