component_icondir = $(pkgdatadir)/images/components
component_icon_DATA = \
	7seg.png \
	adder.png \
	and.png \
	counter.png \
	dff.png \
	gnd.png \
	jkff.png \
	led.png \
	nand.png \
	nor.png \
	not.png \
	or.png \
	osc.png \
	probe.png \
	rsff.png \
	siso.png \
	sipo.png \
	piso.png \
	pipo.png \
	sw.png \
	text.png \
	tff.png \
	vdd.png \
	xor.png

EXTRA_DIST = \
	$(component_icon_DATA)
